# PolicyRadar

./: .backend-checklist.md  .compliance-monitor.md  .eslintrc.js  .gitignore  .monitoring-protocol.md  AGENT_DEVIATION_MONITOR.md  AGENT_PROGRESS_MONITOR.md  APP_FUNCTIONALITY_STATUS.md  BACKEND_AGENT_DIGEST_SAVE.md  BACKEND_AGENT_SAVED_TAB.md  BACKEND_AGENT_START_PROMPT.md  BACKEND_CHANGELOG.md  BACKEND_TASKS_COMPLETE.md  BACKEND_VERIFICATION_COMPLETE.md  COMPLETE_TEST_STATUS.md  COMPLIANCE_STATUS.md  FINAL_TEST_DELIVERY_REPORT.md  FRONTEND_AGENT_START_PROMPT.md  FRONTEND_AGENT_UI_FIXES.md  FRONTEND_DATA_TESTID_FIX.md  INCREMENTAL_PUSH_REMINDER.md  INTEGRATION_TEST_FIXES.md  LEGEND_IMPLEMENTATION_PLAN.md  MONITORING_COMPLETE_SETUP.md  MONITORING_SETUP_COMPLETE.md  MONITORING_SYSTEM_SUMMARY.md  PIPELINE_FIX_COMPLETE.md  PLAN_COMPLIANCE_CHECK.md  QUICK_STATUS_DASHBOARD.md  README.md  SAVE_ENDPOINT_TEST_RESULTS.md  SAVE_ENDPOINT_VERIFICATION.md  SMOKE_FLOW_TEST_RESULTS.md  TESTING_AGENT_BRIEF.md  TESTING_AGENT_FINAL_STATUS.md  TESTING_AGENT_START_PROMPT.md  TESTING_AGENT_STATUS_UPDATE.md  TEST_FEEDBACK.md  TEST_INFRASTRUCTURE_COMPLETE.md  TEST_PROGRESS_TRACKER.md  (+12 more)
code_frontend/: package-lock.json
contracts/: openapi.yml  scoring.md
instructions/: ACTION_PLAN_POST_TEST_RESULTS.md  AGENT_COMPLIANCE_CORRECTIONS.md  AGENT_DEVIATION_MONITOR.md  AGENT_MONITORING_CHECKLIST.md  AGENT_SETUP.md  AGENT_STATUS_TRACKER.md  AUTO_UPDATE_NOTES.md  BACKEND_ADVISORY.md  BACKEND_AGENT_PIPELINE_FIX.md  BACKEND_AGENT_PROMPT.md  BACKEND_AGENT_SAVE_BUTTON_DEBUG.md  BACKEND_AGENT_TASKS_COMPLETE.md  BACKEND_AGENT_UPDATED_PROMPT.md  BACKEND_TASKS_SUMMARY.md  COMPLETE_TEST_DELIVERY.md  COMPLIANCE_STATUS.md  COMPREHENSIVE_ACTION_PLAN.md  COMPREHENSIVE_TEST_SUMMARY.md  CRITICAL_PATH_TO_100_PERCENT.md  CURRENT_STATUS_AND_ACTIONS.md  CURRENT_TEST_STATUS.md  DATABASE_FIX.md  E2E_TEST_BLOCKING_ISSUE.md  FINAL_TEST_EXECUTION_REPORT.md  FINAL_TEST_REPORT.md  FRONTEND_AGENT_COMPLETE_PROMPT.md  FRONTEND_AGENT_DIGEST_SAVE_FIX.md  FRONTEND_AGENT_PROMPT.md  FRONTEND_AGENT_SAVED_TAB.md  FRONTEND_AGENT_SAVE_BUTTON_DEBUG.md  FRONTEND_AGENT_TEST_ID_FIX.md  FRONTEND_AGENT_UPDATED_PROMPT.md  INTEGRATION_TEST_FAILURE_ANALYSIS.md  INTEGRATION_TEST_STATUS.md  MANUAL_SETUP_GUIDE.md  MASTER_COORDINATION_PLAN.md  MONITORING.md  MONITORING_SYSTEM.md  NEXT_STEPS_INTEGRATION_BACKEND.md  PSQL_QUICK_FIX.md  (+20 more)
playwright/: policy-detail.spec.ts  policy-feed.spec.ts
policy-radar-frontend/: API_VERIFICATION.md  COMPLETION_REPORT.md  DEBUG_SUMMARY.md  ENV_SETUP.md  (+19 more)
(+58 files in other folders)
